# prune-github-images

./: .gitignore  README.md  main.py  pyproject.toml  remove_container.ipynb
.github/workflows/: clean-container.yml
